Name:           monadServ
Cabal-Version:  >= 1.2
Build-Type:	Simple
Version:        0.1.1
License:        BSD3
License-File:   LICENSE
Author:         Jeff Caldwell
Maintainer:     jeffery DOT caldwell AT gmail DOT com
Category:       Server
Stability:      Beta
Synopsis:       A framework for creating server envinronments
Homepage:       http://jaxclipse.com/monadServ
Description:
  monadServ is a famework for building request-response style servers.
  Applications are crated by declaratively defining a set of server
  commands.  Support for multiple backends.  
  git clone git://jaxclipse.com/monadServ.git

Flag small_base
  Description: Choose the new smaller, split-up base package.

Library
  Hs-Source-Dirs:
     src

  if flag(small_base)
    Build-Depends:
     base, haskell98, mtl, pretty, bytestring, network, parsec
  else
    Build-Depends: base < 3, parsec, mtl, network

  Build-Depends: old-time, old-locale, HTTP < 4000, time, uniqueid

  Extensions:
     MultiParamTypeClasses
     FunctionalDependencies
     ExistentialQuantification
     CPP
     UndecidableInstances
     GeneralizedNewtypeDeriving
     FlexibleInstances
     ScopedTypeVariables

  if os(windows)
     GHC-Options: -DBUILD_WINDOWS
  else
     if impl( ghc >= 6.8 )
        Build-Depends: unix

  if impl( ghc >= 6.8 )
     Build-Depends: directory, containers
     GHC-Options: -XPatternSignatures

  Exposed-modules:
     MonadServ
     MonadServ.HttpMonad
  Other-modules:
     MonadServ.RunServer
     MonadServ.JSON
     MonadServ.JSONObject
     MonadServ.TestJSON
     MonadServ.Types

